# pykickoff

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
src/pykickoff/: __init__.py  __main__.py  generator.py  utils.py  wizard.py
src/pykickoff/templates/base/: README.md.j2  pyproject.toml.j2
src/pykickoff/templates/cicd/: ci.yml.j2  test_basic.py.j2
src/pykickoff/templates/docker/: Dockerfile.j2  dockerignore.txt
src/pykickoff/templates/fastapi/: main.py.j2
src/pykickoff/templates/package/: MANIFEST.in.j2  tox.ini.j2
tests/: test_generagtor.py  test_project_generator.py
